Mustaqil_organish_uchun/questionGenerate/gitops/sharpistai.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  sharpistai
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharpistai
  namespace: sharpistai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sharpistai
  template:
    metadata:
      labels:
        app: sharpistai
    spec:
      containers:
      - name: sharpistai
        image: dellicon/sharpistai:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: sharpistai
---
apiVersion: v1
kind: Service
metadata:
  name: sharpistai
  namespace: sharpistai
spec:
  selector:
    app: sharpistai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sharpistai
  namespace: sharpistai
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180s"
spec:
  ingressClassName: nginx
  rules:
  - host: app.danke.uz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sharpistai
            port:
              number: 80
  tls:
  - hosts:
    - app.danke.uz
    secretName: app-danke-uz-tls
